--- a/app/static/style.css
+++ b/app/static/style.css
@@ -12,7 +12,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 120px;
 }
 
 .footer {
@@ -20,10 +20,10 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 120px;
   background-color: #f5f5f5;
 }
 
-.container .text-muted {
-  margin: 20px 0;
+footer .container {
+  margin-top: 20px;
 }
