--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,25 +1,6 @@
-{% extends "bootstrap/base.html" %}
+{% extends "base.html" %}
 
-{% import "bootstrap/wtf.html" as wtf %}
-{% import "bootstrap/fixes.html" as fixes %}
-{% import "bootstrap/utils.html" as util %}
-
-{% block styles %}
-{{super()}}
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='style.css')}}">
-{% endblock %}
-
-{% block head%}
-{{super()}}
-<link rel="icon"
-      type="image/png"
-      href="/static/favicon.ico">
-{% endblock %}
-
-{% block title %} PEtab Validation {% endblock %}
-
-{% block content %}
+{% block app_content %}
     <div class="container">
         <div class="page-header">
             <div class="row">
@@ -52,26 +33,4 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted">
-                More information aboout PEtab format at
-                <a href="https://github.com/ICB-DCM/PEtab">
-                    https://github.com/ICB-DCM/PEtab
-                </a>
-            </p>
-            <p class="text-muted">
-                Imprint:
-                <a href="https://www.helmholtz-muenchen.de/en/imprint/index.html">
-                    https://www.helmholtz-muenchen.de/en/imprint/index.html
-                </a>
-            </p>
-            <p class="text-muted">
-                Privacy Statement:
-                <a href="https://www.helmholtz-muenchen.de/en/data-protection-statement/index.html">
-                    https://www.helmholtz-muenchen.de/en/data-protection-statement/index.html
-                </a>
-            </p>
-        </div>
-    </footer>
 {% endblock %}
