Reduce footer verbosity

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,21 +26,18 @@
     <footer class="footer">
         <div class="container">
             <p class="text-muted">
-                More information aboout PEtab format at
-                <a href="https://github.com/ICB-DCM/PEtab">
-                    https://github.com/ICB-DCM/PEtab
+                <a href="https://petab.readthedocs.io/">
+                    About PEtab
                 </a>
             </p>
             <p class="text-muted">
-                Imprint:
                 <a href="https://www.helmholtz-muenchen.de/en/imprint/index.html">
-                    https://www.helmholtz-muenchen.de/en/imprint/index.html
+                    Imprint
                 </a>
             </p>
             <p class="text-muted">
-                Privacy Statement:
                 <a href="https://www.helmholtz-muenchen.de/en/data-protection-statement/index.html">
-                    https://www.helmholtz-muenchen.de/en/data-protection-statement/index.html
+                    Privacy Statement
                 </a>
             </p>
         </div>
